# eds-api-client

./: .env.example  .gitignore  LICENSE  NOTES.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test_requirements.txt
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  pythonapp.yml
src/: allowed_values.py  api_client.py  large_lots.py  responses.py  submission.py  web_client.py
tests/: conftest.py  dummy_data.py  test_api_client.py  tests.env  utils.py
tests/fixtures/: new_user_invalid.json  new_user_valid.json  submission_invalid.json  submission_valid.json
tests/fixtures/vcr_cassettes/: download_pdf_invalid.yaml  download_pdf_valid.yaml  login_invalid.yaml  login_valid.yaml  register_route.yaml  register_user.yaml  register_user_invalid.yaml  submission_invalid.yaml  submission_valid.yaml  submit_route.yaml
